--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,17 +1,80 @@
-<div class="container-fluid p-5">
-    <div class="row">
-        <div class="col fs-5 fw-bold py-5">
-            <h1>Prest-a-Book</h1>
-            <br>
-            <p>Esta web está hecha por Alberto Jiménez, Carlos Lafuente y Facundo Silva como parte del proyecto Prest-a-Book.</p>
-            <p>Prest-a-Book es una aplicación para el préstamos de libros que fomenta la lectura y el compañerismo entre personas con dicho hobby.</p>
-            <p>Este proyecto es posible gracias a 
-            <a href="https://www.t-systems.com/es/es">T-System</a>, 
-            <a href="https://cambrareus.org/">Cambra Reus</a>,
-            <a href="https://fundacionesplai.org/">Fundación esplai</a> y
-            <a href="https://techmabs.com/">Techma</a>.
-            <br><br>
-            <p>Prest-a-Book no se hace responsable de la pérdida de libros o diferencias entre los usuarios de esta plataforma.</p>
+<div class="container-fluid color-custom-black h-100">
+    <div class="row h-100">
+        <div class="col-sm-9 p-0">
+            <div class="container-fluid bg-custom-yellow h-100 p-5">
+                <div class="row">
+                    <div class="col fs-1 fw-bold py-3" id="intro">
+                        <p>Prest-a-Book © </p>
+                        <p>Web creada como proyecto Prest-a-Book por:</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col fw-bold py-2" id="intro">
+                        <button class="btn btn-link fw-bold" ngbButton (click)="agrandar(1)"><img id="mini" [src]="imgSrc1"></button>
+                        <button class="btn btn-link fw-bold" ngbButton (click)="agrandar(2)"><img id="mini" [src]="imgSrc2"></button>
+                        <button class="btn btn-link fw-bold" ngbButton (click)="agrandar(3)"><img id="mini" [src]="imgSrc3"></button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col py-1" id="intro">
+                        <br>
+                        <p>Prest-a-Book es una aplicación para el préstamos de libros que fomenta la lectura y el compañerismo entre personas con dicho hobby.</p>
+                        <p>Este proyecto es posible gracias a 
+                        <a href="https://www.t-systems.com/es/es">T-System</a>, 
+                        <a href="https://cambrareus.org/">Cambra Reus</a>,
+                        <a href="https://fundacionesplai.org/">Fundación esplai</a> y
+                        <a href="https://techmabs.com/">Techma</a>.
+                        <br><br>          
+                        <p>Prest-a-Book no se hace responsable de la pérdida de libros o diferencias entre los usuarios de esta plataforma.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm p-0">
+            <div class="container bg-custom-orange h-100 grande">
+
+                <!--Alberto-->
+
+                <div class="row justify-content-md-center" *ngIf="fotonum==1">
+                    <div class="col-12 col-md-auto p-5" id="intro">
+                        <img id="foto" [src]="imgSrc1">
+                    </div>
+                    <div class="col-12 text-center">
+                        Alberto Jiménez
+                    </div>
+                </div>
+
+                <!--Facu-->
+
+                <div class="row justify-content-md-center" *ngIf="fotonum==2">
+                    <div class="col-12 col-md-auto p-5" id="intro">
+                        <img id="foto" [src]="imgSrc2">
+                    </div>
+                    <div class="col-12 text-center" >
+                        Facundo Silva
+                    </div>
+                </div>
+
+                <!--Carlos-->
+
+                <div class="row justify-content-md-center" *ngIf="fotonum==3">
+                    <div class="col-12 col-md-auto p-5" id="intro">
+                        <img id="foto" [src]="imgSrc3">
+                    </div>
+                    <div class="col-12 text-center">
+                        Carlos Lafuente
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
+
+        
