--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,10 +5,10 @@
 			<div class="col fs-1 align-self-center fw-bolder">¡Bienvenido a Prest-a-Book!</div>
 		</div>
 		<div class="row">
-			<div class="col align-self-center text-center fw-bolder pt-5">¿Buscas libros nuevos que devorar? ¿Quieres intercambiar libros y abrir nuevos mundos a otros?</div>
+			<div class="col align-self-center text-center fw-bolder pt-5">¿Buscas libros nuevos que devorar? ¿Quieres intercambiar obras y abrir nuevos mundos a lectores como tú?</div>
 		</div>
 		<div class="row">
-			<div class="col align-self-center text-center fw-bolder pt-5"><a href="/register-login">¡Regístrate aquí!</a></div>
+			<div class="col align-self-center text-center fw-bolder pt-5"><a href="/login-register">¡Regístrate aquí! ¿Ya tienes cuenta? ¡Accede!</a></div>
 		</div>
 	</div>
 
@@ -32,21 +32,67 @@
 		</div>
 	</div> -->
 
-	<div class="container-fluid p-5 pt-0">
+	<div id="cards-container" class="container-fluid p-5 pt-0 mt-5">
 		<div class="row">
-			<div class="col mt-3 text-center">
-				<img src="assets/BDM.jpg" class="img-fluid" alt="Bruja del mar">
-			</div>
-			<div class="col mt-3 text-center">
-				<img src="assets/DQDLM.jpg" class="img-fluid" alt="Bruja del mar">
-			</div>
-			<div class="col mt-3 text-center">
-				<img src="assets/AEEPDLM.jpg" class="img-fluid" alt="Bruja del mar">
-			</div>
-			<div class="col-1 align-self-center">
-				<svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-arrow-right-square-fill" viewBox="0 0 64 64">
-					<path d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1z"/>
-				</svg>
+			<div id="carouselExampleIndicators" class="carousel slide pb-5 col-lg-6 col-md-8 col-sm-12" data-bs-ride="true">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+						class="active indicator" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+						aria-label="Slide 2" class="indicator"></button>
+				</div>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<div class="card-group">
+							<div class="card m-2" style="width: 18rem;">
+								<img src="./../../assets/AEEPDLM.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+							<div class="card m-2" style="width: 18rem;">
+								<img src="./../../assets/BDM.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+							<div class="card m-2" style="width: 18rem;">
+								<img src="./../../assets/DQDLM.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="card-group">
+							<div class="card m-2" style="width: 18rem;">
+								<img src="./../../assets/AEEPDLM.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+							<div class="card m-2" style="width: 18rem;">
+								<img src="./../../assets/BDM.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+							<div class="card m-2" style="width: 18rem;">
+								<img src="./../../assets/DQDLM.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -55,13 +101,15 @@
 		<div class="row">
 			<div class="col">
 				<span class="fs-2">¿No encuentras lo que buscas?</span><br>
-				<span class="color-custom-blue fs-3">Crea una lista de deseos --></span>
+				<a class="color-custom-blue fs-3" href="/interface">Crea una lista de deseos --></a>
 			</div>
 			<div class="col">
 				<span class="fs-2">¿Quieres prestar libros que no usas?</span><br>
-				<span class="color-custom-blue fs-3">Inicia sesión y comienza a compartir --></span>
+				<a class="color-custom-blue fs-3" href="/login-register">Inicia sesión y comienza a compartir --></a>
 			</div>
 		</div>
 	</div>
+
+
 
 </body>
