--- a/src/app/booksearch/booksearch.component.html
+++ b/src/app/booksearch/booksearch.component.html
@@ -198,29 +198,29 @@
             <div class="col">
                 <div class="container bg-custom-orange">
                     <div class="row p-5 pb-1 text-center">
-                        <div class="col-4">
-                            <img src="assets/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
+                        <div class="col-sm-auto pt-2">
+                            <img src="assets/DQDLM.jpg" alt="Bruja del mar" height="300">
                         </div>
-                        <div class="col-4">
-                            <img src="assets/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
+                        <div class="col-sm-auto pt-2">
+                            <img src="assets/DQDLM.jpg" alt="Bruja del mar" height="300">
                         </div>
-                        <div class="col-4">
-                            <img src="assets/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
+                        <div class="col-sm-auto pt-2">
+                            <img src="assets/DQDLM.jpg" alt="Bruja del mar" height="300">
                         </div>
                     </div>
                     <div class="row p-5 pb-1 text-center">
-                        <div class="col-4">
+                        <div class="col-sm-auto pt-2">
                             <img src="assets/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-auto pt-2">
                             <img src="assets/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
                         </div>
                     </div>
                     <div class="row p-5 text-center">
-                        <div class="col-4">
+                        <div class="col-sm-auto pt-2">
                             <img src="assets/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-auto pt-2">
                             <img src="assets/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
                         </div>
                     </div>
