--- a/src/app/interface/interface.component.html
+++ b/src/app/interface/interface.component.html
@@ -5,7 +5,7 @@
                 <div class="container bg-white">
                     <div class="row p-5">
                         <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid"ºº alt="Bruja del mar" height="300">
+                            <img src="./../../assets/Portrait_placeholder.png" class="img-fluid"ºº alt="Bruja del mar" height="300">
                         </div>
                         <div class="col">
                             <div class="container-fluid fs-4 text-start">
@@ -56,23 +56,24 @@
                             Lista de deseos
                         </div>
                     </div>
-                    <div class="row p-4">
-                        <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
+                    <div class="row p-2">
+                        <div class="card m-2 col-lg-2 col-11">
+                            <img src="./../../assets/AEEPDLM.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
                         </div>
-                        <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
+                        <div class="card m-2 col-lg-2 col-11" >
+                            <img src="./../../assets/BDM.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
                         </div>
-                        <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
-                        </div>
-                        <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
-                        </div>
-                    </div>
-                    <div class="row px-4 pb-3">
-                        <div class="col text-end">
-                            <button type="button" class="btn btn-primary">Modificar lista</button>
+                        <div class="card m-2 col-lg-2 col-11" >
+                            <img src="./../../assets/DQDLM.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -86,18 +87,24 @@
                             Mis libros publicados
                         </div>
                     </div>
-                    <div class="row p-4">
-                        <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
+                    <div class="row p-2">
+                        <div class="card m-2 col-lg-2 col-11">
+                            <img src="./../../assets/AEEPDLM.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
                         </div>
-                        <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
+                        <div class="card m-2 col-lg-2 col-11" >
+                            <img src="./../../assets/BDM.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
                         </div>
-                        <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
-                        </div>
-                        <div class="col-3">
-                            <img src="img/DQDLM.jpg" class="img-fluid" alt="Bruja del mar" height="300">
+                        <div class="card m-2 col-lg-2 col-11" >
+                            <img src="./../../assets/DQDLM.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="row px-4 pb-3">
