--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,14 +1,13 @@
 <body class="bg-custom-yellow">
-	<div class="container-fluid p-5">
+	<div id="bienvenido" class="container-fluid p-5 text-white">
 		<div class="row">
-			<div class="col-4 text-end"><img src="assets/booklogo.png" class="img-fluid" height="128px" width="128px"></div>
 			<div class="col fs-1 align-self-center fw-bolder">¡Bienvenido a Prest-a-Book!</div>
 		</div>
 		<div class="row">
-			<div class="col align-self-center text-center fw-bolder pt-5">¿Buscas libros nuevos que devorar? ¿Quieres intercambiar obras y abrir nuevos mundos a lectores como tú?</div>
+			<div class="col fs-5 align-self-center fw-bolder pt-5">¿Buscas libros nuevos que devorar? ¿Quieres intercambiar obras y abrir nuevos mundos a lectores como tú?</div>
 		</div>
 		<div class="row">
-			<div class="col align-self-center text-center fw-bolder pt-5"><a href="/login-register">¡Regístrate aquí! ¿Ya tienes cuenta? ¡Accede!</a></div>
+			<div class="col align-self-center fw-bolder pt-5"><a href="/login-register">¡Regístrate aquí! ¿Ya tienes cuenta? ¡Accede!</a></div>
 		</div>
 	</div>
 
@@ -99,11 +98,11 @@
 
 	<div class="container-fluid bg-custom-orange p-5">
 		<div class="row">
-			<div class="col">
+			<div class="col-6 text-center">
 				<span class="fs-2">¿No encuentras lo que buscas?</span><br>
 				<a class="color-custom-blue fs-3" href="/interface">Crea una lista de deseos --></a>
 			</div>
-			<div class="col">
+			<div class="col-6 text-center">
 				<span class="fs-2">¿Quieres prestar libros que no usas?</span><br>
 				<a class="color-custom-blue fs-3" href="/login-register">Inicia sesión y comienza a compartir --></a>
 			</div>
