--- a/src/app/elements/footer/footer.component.css
+++ b/src/app/elements/footer/footer.component.css
@@ -1,5 +1,3 @@
-
-
 .container{
     background-color: gray-900;
     position:relative;
@@ -18,3 +16,11 @@ footer{
     color:rgb(0, 107, 166)
 }
 
+a:hover{
+
+    color:rgb(0, 121, 185) !important;
+}
+
+ul, li{
+    display:inline-block;
+}
