--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -13,8 +13,9 @@
                     <a href="/interface" class="nav-item nav-link">Mi zona</a>
                 </div>
                 <div class="navbar-nav ms-auto">
-                    <a href="/login-register" class="nav-item nav-link">Register</a>
-                    <a href="/login-register" class="nav-item nav-link">Login</a>
+                    <a *ngIf="isLoged" class="nav-item nav-link" (click)="logOut()">Log Out</a>
+                    <a *ngIf="!isLoged" href="/login-register" class="nav-item nav-link">Register</a>
+                    <a *ngIf="!isLoged" href="/login-register" class="nav-item nav-link">Login</a>
                 </div>
             </div>
         </div>
