--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -10,3 +10,22 @@
     border:0.13em solid black;
     border-radius: 50px;
 }
+
+#bienvenido{
+    height: 50vh;
+    max-height: 50vh;
+    background-image: url(./../../assets/background.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 170% auto;
+}
+
+.card > img{
+    width: 100%;
+    height: 80%;
+}
+
+.card{
+    padding: 0;
+    border: 0px;
+}
