Fase integración de datos avanzada

--- a/src/app/adminpanel-books/adminpanel-books.component.html
+++ b/src/app/adminpanel-books/adminpanel-books.component.html
@@ -15,10 +15,10 @@
             <tbody *ngFor="let libro of libros">
 
                 <tr>
-                    <th scope="row">{{libro.id}}</th>
-                    <td>{{libro.title}}</td>
-                    <td>{{libro.id_user.username}}</td>
-                    <td><button class="btn btn-danger">x</button></td>
+                    <th scope="row">{{libro?.id}}</th>
+                    <td>{{libro?.title}}</td>
+                    <td>{{libro?.id_user.username}}</td>
+                    <td><button class="btn btn-danger" (click)="borrarLibro(libro?.id)">x</button></td>
                 </tr>
 
             </tbody>
