--- a/src/app/booksearch/booksearch.component.html
+++ b/src/app/booksearch/booksearch.component.html
@@ -1,7 +1,7 @@
-<body class="bg-custom-yellow p-1">
+<body class="bg-custom-yellow p-1 purebackground background-image-center">
     <div class="container mt-5 ">
-        <div id="searchbar" class="row bg-custom-orange p-3 mb-2">
-            <div class="col-lg-2 col-md-4 col-6  mt-1">
+        <div id="searchbar" class="row bg-custom-orange p-3 mb-2 rounded-3">
+            <div class="col-lg-2 col-md-4 col-6 mt-1">
                 <select name="orderby" id="orderby" class="form-select col-2 px-2">
                     <option value="alfabetico">Alfabético</option>
                     <option value="reciente">Más Reciente</option>
@@ -15,10 +15,10 @@
                 <input name="autor" type="text" class="form-control" placeholder="Por Autor">
             </div>
         </div>
-        <div id="books" class="row justify-content-center bg-custom-orange pt-4 mb-4" *ngIf="books!==undefined">
+        <div id="books" class="row justify-content-center bg-custom-orange py-4 mb-4 rounded-3" *ngIf="books!==undefined">
             <div class="card m-2" style="width: 18rem;" *ngFor="let book of books">
                 <a href="book/{{book.id}}">
-                    <img src="{{book.img}}" class="card-img-top" alt="...">
+                    <img src="{{book.img}}" class="card-img-top rounded-top" alt="{{book.title}}">
                     <div class="card-body">
                         <h5 class="card-title">{{book.title}}</h5>
                     </div>
