--- a/src/app/elements/footer/footer.component.html
+++ b/src/app/elements/footer/footer.component.html
@@ -5,7 +5,7 @@
         <!--Info izquierda-->
 
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-            <h5 class="text-uppercase color-custom-red">TEAM Prest-a-book</h5>
+            <h5 class="text-uppercase color-custom-pink">TEAM Prest-a-book</h5>
             <p>
             <span class="text-white">¡Conoce a nuestro equipo! </span>
             <a href="/about">Alberto Jiménez, Carlos Lafuente y Facundo Silva</a>.
@@ -15,7 +15,7 @@
         <!--Columna 1 de links-->
 
         <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase color-custom-red">Referidos</h5>
+            <h5 class="text-uppercase color-custom-pink">Referidos</h5>
             <ul class="list-unstyled mb-0">
             <li class="mx-2">
                 <a href="https://www.t-systems.com/es/es" class="text-white">T-Systems</a>
