--- a/src/app/interface/interface.component.css
+++ b/src/app/interface/interface.component.css
@@ -1,12 +1,23 @@
-.card > img{
+.card > #foto{
     width: 100%;
     height: 80%;
     
+}
+
+#foto > img{
+    width:100%;
+    height: 100%;
+}
+
+#foto > button{
+    position: absolute;
+    top:1%;
+    right: 1%;
+    padding:  0 2% 0 2%;
+    display: inline;
 }
 
 .card{
     padding: 0;
     border: 0px;
 }
-
-.row{}
