--- a/src/app/loginregister/loginregister.component.css
+++ b/src/app/loginregister/loginregister.component.css
@@ -14,6 +14,22 @@
 
 }
 
+.intro3 {
+
+    animation-name: appear3;
+    animation-duration: 0.8s;
+    animation-iteration-count: 1;
+
+}
+
+.intro4 {
+
+    animation-name: appear4;
+    animation-duration: 0.8s;
+    animation-iteration-count: 1;
+
+}
+
 @keyframes appear {
 
     from {margin-top: 1em;
@@ -30,12 +46,28 @@
 
 }
 
+@keyframes appear3 {
+
+    from {margin-top: 0.2em;
+    color: #1915196b;}
+    to {margin-top: 0em; color: inherit;}
+
+}
+
+@keyframes appear4 {
+
+    from {margin-top: 0.2em;
+    color: #ffffff;}
+    to {margin-top: 0em; color: #ffffff;}
+
+}
+
 #acceder{
     background-image: url(/assets/Acceder.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width:100%;
-    height:100%;
+    height:75vh;
 }
 
 #registrarse{
@@ -43,5 +75,5 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width:100%;
-    height:70vh;
+    height:75vh;
 }
