--- a/src/app/loginregister/loginregister.component.html
+++ b/src/app/loginregister/loginregister.component.html
@@ -131,12 +131,12 @@
                     </div>
                     <div class="row">
                         <div class="col pt-3">
-                            <input type="button" value="Registrarse" class="btn btn-primary fs-6 intro4" (click)="onSubmitRegister()">
+                            <input type="button" value="Registrarse" class="btn btn-primary fs-6" (click)="onSubmitRegister()">
                             <p *ngIf="registerSuccesful" class="text-color-green">Te has registrado correctamente</p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col py-1 pb-5 intro3">
+                        <div class="col py-1 intro3">
                             <span>¿Ya tienes cuenta? </span> <a href="./login-register#header" class="color-custom-blue text-decoration-none" (click)="cambiarEstado()">Accede</a>
                         </div>
                     </div>
