--- a/src/app/loginregister/loginregister.component.css
+++ b/src/app/loginregister/loginregister.component.css
@@ -22,14 +22,6 @@
 
 }
 
-.intro4 {
-
-    animation-name: appear4;
-    animation-duration: 0.8s;
-    animation-iteration-count: 1;
-
-}
-
 @keyframes appear {
 
     from {margin-top: 1em;
@@ -48,17 +40,9 @@
 
 @keyframes appear3 {
 
-    from {margin-top: 0.2em;
+    from {margin-top: 0.01em;
     color: #1915196b;}
     to {margin-top: 0em; color: inherit;}
-
-}
-
-@keyframes appear4 {
-
-    from {margin-top: 0.2em;
-    color: #ffffff;}
-    to {margin-top: 0em; color: #ffffff;}
 
 }
 
@@ -67,7 +51,8 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width:100%;
-    height:75vh;
+    height:100vh;
+    border-left: 2px solid black;
 }
 
 #registrarse{
@@ -75,5 +60,6 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width:100%;
-    height:75vh;
+    height:100vh;
+    border-left: 2px solid black;
 }
