--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,23 +1,24 @@
-<body class="bg-custom-yellow">
-	<div id="bienvenido" class="container-fluid p-5 text-white">
-		<div class="row justify-content-md-center">
-			<div class="col col-md-auto fs-1 align-self-center fw-bolder"><img src="assets/Logoprestabook.png" alt="Prest-A-Book"></div>
-			<div class="col col-md-auto fs-1 align-self-center fw-bolder color-custom-blue">Bienvenido a Prest-a-book</div>
+<body class="bg-custom-yellow fontcabecera">
+	<div id="bienvenido" class="container-fluid p-5 text-white text-center">
+		<div class="row pt-5">
+			<div class="col-lg-5 fs-1 align-self-center fw-bolder"><img src="assets/Logoprestabook.png" alt="Prest-A-Book"></div>
 		</div>
-
+		<div class="row">
+			<div class="col-lg-5 mt-5 fs-1 align-self-center fw-bolder color-custom-blue">Bienvenido a Prest-a-book</div>
+		</div>
 	</div>
 
-	<div class="container-fluid bg-custom-orange px-0">
+	<div class="container-fluid bg-custom-orange px-0" id="containercentral">
 		<div class="container-fluid purebackground p-5">
 			<div class="row ignore-opacity">
-				<div class="col-3 text-end contentintroImg"><img src="assets/book.png" class="img-fluid" height="256px" width="256px"></div>
-					<div class="col col-9 align-self-center fs-5 contentintroText">¿Buscas libros nuevos que devorar? ¿Quieres intercambiar obras y abrir nuevos mundos a lectores como tú?<a href="/login-register" class="color-custom-blue2"><br>¡Regístrate aquí! ¿Ya tienes cuenta? ¡Accede!</a></div>
-				</div>
+				<div class="col-3 text-end contentintroImg"><img src="assets/libroscielo.jpg" class="img-fluid" id="libroscielo" height="256px" width="256px"></div>
+				<div class="col col-9 align-self-center fs-5 contentintroText">¿Buscas libros nuevos que devorar? ¿Quieres intercambiar obras y abrir nuevos mundos a lectores como tú?<a href="/login-register" class="color-custom-blue2"><br>¡Regístrate aquí! ¿Ya tienes cuenta? ¡Accede!</a></div>
 			</div>
 			<div class="row ignore-opacity">
-				<div class="col-3 text-end contentintroImg"><img src="assets/book.png" class="img-fluid" height="256px" width="256px"></div>
 				<div class="col align-self-center fs-5 contentintroText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pretium ac lectus non iaculis. Nam auctor sollicitudin ullamcorper. Sed tincidunt, nulla in aliquam consequat, magna libero mattis tellus, ut facilisis libero odio in erat. Aenean velit ligula, imperdiet sit amet vehicula id, rhoncus sed tellus.</div>
+				<div class="col-3 text-end contentintroImg"><img src="assets/book.png" class="img-fluid" height="256px" width="256px"></div>
 			</div>
+		</div>
 	</div>
 
 	<!-- <div class="container-fluid p-5">
@@ -75,7 +76,7 @@
 		</div>
 	</div>
 
-	<div class="container-fluid bg-custom-orange">
+	<div class="container-fluid bg-custom-orange" id="bottom">
 		<div class="container-fluid purebackground p-5">
 			<div class="row">
 				<div class="col-6 text-center contentintroImg">
