--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -39,6 +39,10 @@
     background-size: 100% auto;
 }
 
+#flotando{
+    border-radius: 50%;
+}
+
 .card > img{
     width: 100%;
     height: 80%;
@@ -53,6 +57,10 @@
 
     width: 50%;
 
+}
+
+#libreria{
+    padding-right: 5px;
 }
 
 @media (max-width: 950px) {
