Cambios a falta de 1 dia

--- a/src/app/elements/footer/footer.component.html
+++ b/src/app/elements/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark text-center text-md-start">
+<footer class="footer bg-dark text-center text-md-start fontcabecera">
     <div class="container p-4">
         <div class="row">
 
@@ -14,20 +14,20 @@
 
         <!--Columna 1 de links-->
 
-        <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
             <h5 class="text-uppercase color-custom-pink">Referidos</h5>
             <ul class="list-unstyled mb-0">
             <li class="mx-2">
-                <a href="https://www.t-systems.com/es/es" class="text-white">T-Systems</a>
+                <a href="https://www.t-systems.com/es/es" class="text-white" target="_blank">T-Systems</a>
             </li>
             <li class="mx-2">
-                <a href="https://cambrareus.org/" class="text-white">Cambra Reus</a>
+                <a href="https://cambrareus.org/" class="text-white" target="_blank">Cambra Reus</a>
             </li>
             <li class="mx-2">
-                <a href="https://fundacionesplai.org/" class="text-white">Fundación Esplai</a>
+                <a href="https://fundacionesplai.org/" class="text-white" target="_blank">Fundación Esplai</a>
             </li>
             <li class="mx-2">
-                <a href="https://techmabs.com/" class="text-white">Techma Business School</a>
+                <a href="https://techmabs.com/" class="text-white" target="_blank">Techma Business School</a>
             </li>
             </ul>
         </div>      
