--- a/src/app/loginregister/loginregister.component.html
+++ b/src/app/loginregister/loginregister.component.html
@@ -1,4 +1,4 @@
-<body class="bg-custom-yellow purebackground">
+<body class="bg-custom-yellow purebackground fontcabecera">
 	<div class="container-fluid color-custom-black h-100" *ngIf="!register">
 		<div class="row h-100">
             <div class="col-sm-9 p-0">
