--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid color-custom-black h-100">
+<div class="container-fluid color-custom-black h-100 fontcabecera">
     <div class="row h-100">
         <div class="col-xxl-9 p-0 bg-custom-yellow">
             <div class="container-fluid  h-100 p-5">
