--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,4 +1,4 @@
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg bg-dark fontcabecera">
         <div class="container-fluid">
             <a href="/main" class="navbar-brand p-3 color-custom-blue2">
                 <img src="assets/Logo.png" height="28" alt="" class="pb-1"> Prest-A-Book
@@ -10,9 +10,9 @@
                 <div class="navbar-nav">
                     <a id="home" href="/main" class="nav-item nav-link active color-custom-blue2">Home</a>
                     <a href="/search" class="nav-item nav-link color-custom-blue2">Buscar libros</a>
-                    <a href="/adminpanel" class="nav-item nav-link color-custom-blue2">Admin panel</a>
+                    <a href="/adminpanel/books" class="nav-item nav-link color-custom-blue2" *ngIf="rol == 1 || rol == 2">Admin panel</a>
                 </div>
-                <div class="navbar-nav ms-auto" *ngIf="!isLoged">
+                <div class="navbar-nav ms-auto" *ngIf="!isLoged && !imInLoginRegister">
                     <a href="/login-register" class="nav-item nav-link color-custom-blue2">Register</a>
                     <a href="/login-register" class="nav-item nav-link color-custom-blue2">Login</a>
                 </div>
