--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -7,10 +7,10 @@
 }
 
 .indicator{
-    height: 4.5vh;
+    height: 1vh;
     border:0.13em solid black;
     border-radius: 50px;
-    background-image: url(./../../assets/booklogo.png);
+    /*background-image: url(./../../assets/booklogo.png);*/
     background-repeat: no-repeat;
     background-position: right;
     background-size: 100% auto;
@@ -59,19 +59,53 @@
 
 }
 
-#libreria{
+#libreria {
+
     padding-right: 5px;
+
 }
 
-@media (max-width: 950px) {
+.bookimg {
 
-    #bienvenido{
-        background-size: 110% auto;
+    max-height: 370px;
+
+}
+
+.generatebookMaxHeight {
+
+    max-height: 150px;
+
+}
+
+.generatedbookHeight {
+
+    max-height: 230px;
+
+}
+
+.librarygenerator {
+
+    height: 180px;
+    max-height: 180px;
+    width: 256px;
+    background-image: url(./../../assets/libroscielo.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% auto;
+
+}
+
+@media (max-width: 1700px) {
+
+    .bookimg {
+
+        max-height: 300px;
+
     }
 
 }
 
-@media (max-width: 810px) {
+@media (max-width: 950px) {
 
     #bienvenido{
         background-size: 120% auto;
@@ -79,10 +113,18 @@
 
 }
 
+@media (max-width: 810px) {
+
+    #bienvenido{
+        background-size: 130% auto;
+    }
+
+}
+
 @media (max-width: 750px) {
 
     #bienvenido{
-        background-size: 150% auto;
+        background-size: 160% auto;
     }
 
     #header-reduct-width {
@@ -96,7 +138,13 @@
 @media (max-width: 600px) {
 
     #bienvenido{
-        background-size: 200% auto;
+        background-size: 220% auto;
+    }
+
+    .bookimg {
+
+        max-height: 400px;
+    
     }
 
 }
@@ -114,22 +162,6 @@
 
     animation-name: headerappear;
     animation-duration: 1s;
-    animation-iteration-count: 1;
-
-}
-
-.headerintro2 {
-
-    animation-name: headerappear;
-    animation-duration: 1.5s;
-    animation-iteration-count: 1;
-
-}
-
-.headerintro3 {
-
-    animation-name: headerappear;
-    animation-duration: 2s;
     animation-iteration-count: 1;
 
 }
