--- a/src/app/authorcreate/authorcreate.component.html
+++ b/src/app/authorcreate/authorcreate.component.html
@@ -1,5 +1,5 @@
 <body class="bg-custom-yellow purebackground background-image-center fontcabecera p-3">
-    <div class="container align-center">
+    <div id="contenedor" class="container align-center">
         <div class="row justify-content-md-center">
             <div class="col col-lg-8">
                 <form>
