--- a/src/app/booksearch/booksearch.component.css
+++ b/src/app/booksearch/booksearch.component.css
@@ -1,3 +1,7 @@
+#contenedor{
+    min-height: 70vh;
+}
+
 #books{
     width:100%;
     margin:auto;
@@ -26,7 +30,9 @@
 }
 
 .bookimg {
-
     max-height: 400px;
+}
 
+.spinner-border{
+    margin: auto;
 }
