--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,33 +1,68 @@
-    <nav class="navbar navbar-expand-lg bg-dark fontcabecera">
-        <div class="container-fluid">
-            <a href="/main" class="navbar-brand p-3 color-custom-blue2">
-                <img src="assets/Logo.png" height="28" alt="" class="pb-1"> Prest-A-Book
-            </a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav">
-                    <a id="home" href="/main" class="nav-item nav-link active color-custom-blue2">Home</a>
-                    <a href="/search" class="nav-item nav-link color-custom-blue2">Buscar libros</a>
-                    <a href="/adminpanel/books" class="nav-item nav-link color-custom-blue2" *ngIf="rol == 1 || rol == 2">Admin panel</a>
-                </div>
-                <div class="navbar-nav ms-auto" *ngIf="!isLoged && !imInLoginRegister">
-                    <a href="/login-register" class="nav-item nav-link color-custom-blue2">Register</a>
-                    <a href="/login-register" class="nav-item nav-link color-custom-blue2">Login</a>
-                </div>
-                <div class="navbar-nav ms-auto" *ngIf="isLoged">
-                    <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle color-custom-blue2" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{user?.username}}
-                    </button>
-                    <ul class="dropdown-menu bg-custom-black">
-                        <li><a class="dropdown-item color-custom-blue2" href="./interface">Mi zona</a></li>
-                        <li><a class="dropdown-item color-custom-blue2" (click)="logOut()">Log Out</a></li>
-                    </ul>
-                </div>
+<nav class="navbar navbar-expand-lg bg-dark fontcabecera">
+    <div class="container-fluid">
+        <a href="/main" class="navbar-brand p-3 color-custom-blue2">
+            <img src="assets/Logo.png" height="28" alt="" class="pb-1"> Prest-A-Book
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+                <a id="home" href="/main" class="nav-item nav-link active color-custom-blue2 align-items-center mx-1">Home
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" fill="currentColor"
+                        class="bi bi-house-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z" />
+                        <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z" />
+                    </svg></a>
+                <a href="/search" class="nav-item nav-link color-custom-blue2 mx-1">Buscar libros <svg
+                        xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" fill="currentColor"
+                        class="bi bi-search" viewBox="0 0 16 16">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                    </svg></a>
+                <a href="/bookcreate" class="nav-item nav-link color-custom-blue2 mx-1">Publicar <svg
+                        xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" fill="currentColor"
+                        class="bi bi-plus-lg" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+                    </svg></a>
+                <a href="/adminpanel/books" class="nav-item nav-link color-custom-blue2 mx-1"
+                    *ngIf="rol == 1 || rol == 2">Admin panel <svg xmlns="http://www.w3.org/2000/svg" width="1.2em"
+                        height="1.2em" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
+                    </svg></a>
+            </div>
+            <div class="navbar-nav ms-auto" *ngIf="!isLoged && !imInLoginRegister">
+                <a href="/login-register" class="nav-item nav-link color-custom-blue2">Register</a>
+                <a href="/login-register" class="nav-item nav-link color-custom-blue2">Login</a>
+            </div>
+            <div class="navbar-nav ms-auto" *ngIf="isLoged">
+                <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle color-custom-blue2"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1.3em" height="1.3em" fill="currentColor"
+                        class="bi bi-person-fill" viewBox="0 0 16 16">
+                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
+                    </svg> {{user?.username}}
+                </button>
+                <ul class="dropdown-menu bg-custom-black">
+                    <li><a class="dropdown-item color-custom-blue2" href="./interface">Mi zona <svg
+                                xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" fill="currentColor"
+                                class="bi bi-folder-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3zm-8.322.12C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139z" />
+                            </svg></a></li>
+                    <li><a class="dropdown-item color-custom-blue2" (click)="logOut()">Log Out
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" fill="currentColor"
+                                class="bi bi-power" viewBox="0 0 16 16">
+                                <path d="M7.5 1v7h1V1h-1z" />
+                                <path
+                                    d="M3 8.812a4.999 4.999 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812z" />
+                            </svg>
+                        </a></li>
+                </ul>
             </div>
         </div>
-    </nav>
-
-
-
+    </div>
+</nav>
