--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -33,7 +33,7 @@
 #bienvenido {
     height: 60vh;
     max-height: 60vh;
-    background-image: url(./../../assets/header-3.jpeg);
+    background-image: url(./../../assets/header-3.png);
     background-repeat: no-repeat;
     background-position: right;
     background-size: 100% auto;
